<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:text="@string/Bienvenido"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/casadatos1"
                android:layout_marginRight="35dp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ofertas1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/InformacionCasa"
                android:layout_marginRight="35dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"/>
            <Button
                android:id="@+id/btnOfertas"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Ofertas"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/restaurante"
                android:layout_marginRight="35dp" />
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/pedidos"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Restaurantes"
                android:layout_marginRight="35dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Pedidos"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/btnRepartidor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorRepartidor"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="5dp"
                android:text="@string/InformacionUsuario"/>
            <Button
                android:id="@+id/btnCliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorRepartidor"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorWhite"
                android:text="@string/CerrarSesion"/>
        </LinearLayout>



    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>